--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ soupsieve~=2.5
 dnspython~=2.4.2
 idna~=3.6
 httpcore~=1.0.2
-httpx~=0.26.0
+httpx~=0.25.2
 anyio~=4.2.0
 h11~=0.14.0
 jupyter~=1.0.0
@@ -53,7 +53,7 @@ python-dateutil~=2.8.2
 Babel~=2.14.0
 pygments~=2.17.2
 certifi~=2023.11.17
-pydantic~=1.10.13
+pydantic~=2.5.3
 overrides~=7.4.0
 cffi~=1.16.0
 sympy~=1.12
@@ -101,3 +101,5 @@ Send2Trash~=1.8.2
 tokenizers~=0.15.0
 platformdirs~=4.1.0
 json5~=0.9.14
+orjson~=3.9.12
+mistralai~=0.0.11
